fixed html… think its done

--- a/scribbithtml/gallery.html
+++ b/scribbithtml/gallery.html
@@ -12,25 +12,23 @@
 
 	<body>
 			<div id="site">
-			<div id="header">
+		<div id="header">
 					<div id="logo">
-						<?php
-						echo '<a href="'.path.'/"><</a>';
-						?>
+						<a href="wall.html"><</a>
 					</div>
 					<div>
 							<ul class="topnav">
 								<li>
 									<span><a href="#">Profile</a></span>
 									<ul class="subnav">
-										<li><a href="/profile.html">Go to Profile</a></li>
+										<li><a href="profile.html">Go to Profile</a></li>
 										<li><a href="#">Freunde</a></li>
 										<li><a href="#">Favoriten</a></li>
-										<li><a href="/">Logout</a></li>
+										<li><a href="index.html">Logout</a></li>
 									</ul>
 								</li>
-								<li><?php echo '<span><a href="'.path.'/gallery">Gallery</a></span>' ?></li>
-								<li><?php echo '<span><a href="'.path.'/wall">Wall</a></span>' ?></li>
+								<li><span><a href="gallery.html">Gallery</a></span></li>
+								<li><span><a href="wall.html">Wall</a></span></li>
 							</ul>
 						</div>	
 					<div class="searchbar" >
