--- a/scribbithtml/register.html
+++ b/scribbithtml/register.html
@@ -70,7 +70,7 @@
 					<tr>
 						<td id="text">Email </td>
 						<td>
-							<input type="text" value="', $email, '" name="email" id="email" size="16" onblur="checkEmail(this.form)"/><br>
+							<input type="text" name="email" id="email" size="16" onblur="checkEmail(this.form)"/><br>
 						</td>
 						<td id="validEmail" size="20em">
 						<td>
